k8s_templates/httpbin-with-ingress-ALBbyHelm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  labels:
    app: httpbin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
        - name: httpbin
          image: kennethreitz/httpbin:latest
          ports:
            - name: http
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
spec:
  type: NodePort
  selector:
    app: httpbin
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
      nodePort: 30081 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpbin
  annotations:
    ingress.alb.yc.io/subnets: e9bu3mus66b9sv16eq8q
    ingress.alb.yc.io/external-ipv4-address: 84.201.137.36
    ingress.alb.yc.io/group-name: infra-alb
    ingress.alb.yc.io/security-groups: enpkfvpbmvbfjlsj4n47
spec:    
  rules:
    - host: httpbin.infra.krestunas.ga
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: httpbin
                port:
                  number: 80       


# Авторизуемся в Yandex helm registry:
# export HELM_EXPERIMENTAL_OCI=1
# cat sa-key.json | helm registry login cr.yandex --username 'json_key' --password-stdin 
# Скачиваем чарт Ingress Controller в папку charts:
# helm pull oci://cr.yandex/yc-marketplace/yc-alb-ingress-controller-chart \
# --version=v0.1.3 \
# --untar \
# --untardir=charts 
# Чарт будет храниться в директории charts/yc-alb-ingress-controller-chart. Здесь мы можем посмотреть, какие значения можно задавать для чарта и что входит в его шаблоны.
# Устанавливаем чарт в кластер:
# export FOLDER_ID=$(yc config get folder-id)
# export CLUSTER_ID=$(yc managed-kubernetes cluster get kube-infra | head -n 1 | awk -F ': ' '{print $2}')

# helm install \
# --create-namespace \
# --namespace yc-alb-ingress \
# --set folderId=$FOLDER_ID \
# --set clusterId=$CLUSTER_ID \
# --set-file saKeySecretKey=sa-key.json \
# yc-alb-ingress-controller ./charts/yc-alb-ingress-controller-chart/

# # проверяем, что ресурсы создались
# kubectl -n yc-alb-ingress get all
